--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
     "build": "node build/build.js",
-    "deploy": "npm run build; push-dir --dir=dist --branch=master --cleanup"
+    "deploy": "npm run build push-dir --dir=dist --branch=master --cleanup"
   },
   "dependencies": {
     "firebase": "^5.3.0",
